--- a/index.html
+++ b/index.html
@@ -10,124 +10,98 @@
   </head>
   <body>
 
-    <div class="navbar navbar-dark bg-dark shadow-sm">
-      <div class="container">
-        <strong class="navbar-brand d-flex align-items-center">
-          Hello I'm Joey
-        </strong>
-        <span>
-          <img src="skyrim.jpg" width="60", height="40">
-        </span>
+    <!-- Navbar -->
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <h1 class="navbar-brand">Hey I'm Joey!</h1>
+        </div>
+        <img id="CS-logo" src="Assets/Images/cs-logo.png" height="50px">
+        <div class="nav navbar-nav">
+          <h3 class="navbar-brand">Thank you for playing my games!</h3>
+        </div>
       </div>
-    </div>
+    </nav>
 
-    <section id="CS" class="py-5 text-center container-fluid">
+    <!-- Header banner thingy -->
+    <section id="CS" class="py-5 col-lg-6 col-md-8 text-center container-fluid">
       <div class="row py-lg-5">
         <div id="CS-text" class="rounded col-lg-6 col-md-8 mx-auto text-white">
-          <h1 class="fw-light"> <strong>Career In CS</strong></h1>
-          <p class="lead text-wrap">After I graduate, I would like to get into game development. I'm barely in the Game Dev course this semester but learning unity would probably be my main interest. I'm taking this class because working on Ghettogram two semesters ago was fun.</p>
+          <h1 class="fw-light"> <strong>Made With Unity!</strong></h1>
+          <p class="lead text-wrap">Each of these games took multiple weeks to make. They use the "C#" programming language. Want to try to make your first game? Watch this tutorial: </p>
+          <a href="https://youtu.be/pCBqgREiSUE">How to make Your First Game TODAY! - (Unity 3D)</a>
         </div>
       </div>
     </section>
 
-    <div class=" container-fluid bg-dark bg-gradient pt-5 pb-3">
+    <!-- Row of games -->
+    <div class="games-list container-fluid bg-dark bg-gradient pt-5 pb-3">
       <div class="text-white text-center fs-6">
-        I really love great soundtracks from movies, TV shows, and games so I'll present some of my favorite media.
+        Here's my list of games, enjoy!
       </div>
       
-      <div class="container pt-3 pb-5">
+      <div class="container pt-3 pb-5 ">
         <div class="row">
           <div class="col-sm-3">
             <div class="card shadow-sm">
-              <img src="GoT.jpg" height="250">
+              <img src="Assets/Images/AsteroidField.png" height="250">
               <div class="card-body">
-                <h3 class="card-title"> Game of Thrones </h3>
-                <h6 class="card-subtitle text-muted"> TV series </h6> </br>
-                <p class="text-wrap">Powerful families engage in war to take the Iron Throne. </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <audio controls>
-                    <source src="GoT.mp3" type="audio/mpeg">
-                  </audio>
-                </div>
+                <h3 class="card-title"> Asteroid Field </h3>
+                <p class="text-wrap">Avoid the rocks. Hit left shift boost. Collect popup items to slow down asteroids. Controls and difficulty can be changed.</p>
+                <a href="https://youtu.be/Jh3fX6-Ytf4">Music by E.Hartmann</a> </br> </br>
+                <div class="d-flex justify-content-center"> <button id="Play1" type="button" class="btn btn-primary">Play</button></div>
               </div>
             </div>
           </div>
 
           <div class="col-sm-3">
             <div class="card shadow-sm">
-              <img src="AoT.jpg" height="250">
+              <img src="Assets/Images/coming-soon.jpg" height="250">
               <div class="card-body">
-                <h3 class="card-title"> Attack On Titan </h3>
-                <h6 class="card-subtitle text-muted"> Anime series </h6> </br>
-                <p class="text-wrap">Humanity tries to survive from monsters called Titans.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <audio controls>
-                    <source src="AoT.mp3" type="audio/mpeg">
-                  </audio>
-                </div>
+                <h3 class="card-title"> Coming Soon! </h3>
+                <p class="text-wrap">I have not added in my next game yet! But don't worry, it is being worked on and will be ready soon! Thank you for your patience.</p>
+                <div class="d-flex justify-content-center"> <button id="Play2" type="button" class="btn btn-primary">Play</button></div>
               </div>
             </div>
           </div>
 
           <div class="col-sm-3">
             <div class="card shadow-sm">
-              <img src="interstellar.jpg" height="250">
+              <img src="Assets/Images/coming-soon.jpg" height="250">
               <div class="card-body">
-                <h3 class="card-title"> Interstellar </h3>
-                <h6 class="card-subtitle text-muted"> Movie </h6> </br>
-                <p class="text-wrap">A group of astronauts try to find a new home for humanity. </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <audio controls>
-                    <source src="interstellar.mp3" type="audio/mpeg">
-                  </audio>
-                </div>
+                <h3 class="card-title"> Coming Soon! </h3>
+                <p class="text-wrap">I have not added in my next game yet! But don't worry, it is being worked on and will be ready soon! Thank you for your patience.</p>
+                <div class="d-flex justify-content-center"> <button id="Play2" type="button" class="btn btn-primary">Play</button></div>
               </div>
             </div>
           </div>
 
           <div class="col-sm-3">
             <div class="card shadow-sm">
-              <img src="mandalorian.jpg" height="250">
+              <img src="Assets/Images/coming-soon.jpg" height="250">
               <div class="card-body">
-                <h3 class="card-title"> The Mandalorian </h3>
-                <h6 class="card-subtitle text-muted"> TV series </h6> </br>
-                <p class="text-wrap">A Mandalorian and a Grogu travel the Star Wars galaxy. </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <audio controls>
-                    <source src="mandalorian.mp3" type="audio/mpeg">
-                  </audio>
-                </div>
+                <h3 class="card-title"> Coming Soon! </h3>
+                <p class="text-wrap">I have not added in my next game yet! But don't worry, it is being worked on and will be ready soon! Thank you for your patience.</p>
+                <div class="d-flex justify-content-center"> <button id="Play2" type="button" class="btn btn-primary">Play</button></div>
               </div>
-            </div>
-          </div>
-      </div>
-
-      </br> </br> </br> 
-
-      <div class="card mb-3 bg-transparent border-0">
-        <div class="row g-0">
-          <div class="col-md-6">
-            <iframe src="https://open.spotify.com/embed/playlist/2OIzTv6VBBf0oAAeon5urp" width="450" height="530" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-          </div>
-          <div class="col-md-6 text-white text-left">
-            <div class="card-body">
-              <h2> Wanna check the rest of my music out?</h2> </br>
-              <h4 class="card-text">Here is a 100 song sample of what I like.</h4>
-              <p> Click below for the full playlist.</p> </br>
-              <a href="https://open.spotify.com/playlist/2OIzTv6VBBf0oAAeon5urp" class="d-flex justify-content-center">
-                <div class="row col-4">
-                  <img src="spotify.png" height="150" width="175">
-                  Cinematic Instrumental
-                </div>
-              </a>
             </div>
           </div>
         </div>
       </div>
 
+      </br> </br> </br> 
     </div>
-    <script src="script.js"></script>
-    <!-- JavaScript Bundle with Popper -->
+
+    <!-- Asteroid Field game -->
+    <div id="AsteroidField" class="hidden game container-fluid bg-dark bg-gradient pt-5 pb-3">
+      <div class="d-flex justify-content-center"> <button type="button" class="back btn btn-primary">Back</button></div> </br>
+      <div class="d-flex justify-content-center"> <iframe src="https://i.simmer.io/@JPena208/asteroidfield" style="width:1280px;height:720px;border:0"></iframe> </div>
+      </br> </br> </br> <br>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script src="index.js"> </script>
   </body>
 </html>
