--- a/index.html
+++ b/index.html
@@ -49,8 +49,19 @@
                 <h3 class="card-title"> Asteroid Field </h3>
                 <p class="text-wrap">Avoid the rocks. Hit left shift boost. Collect popup items to slow down asteroids. Controls and difficulty can be changed.</p>
                 <a href="https://youtu.be/Jh3fX6-Ytf4">Music by E.Hartmann</a> </br> </br>
-                <div class="d-flex justify-content-center"> <button id="Play1" type="button" class="btn btn-primary">Play</button></div>
               </div>
+              <div class="play d-flex justify-content-center"> <button id="Play1" type="button" class="btn btn-primary">Play</button></div>
+            </div>
+          </div>
+
+          <div class="col-sm-3">
+            <div class="card shadow-sm">
+              <img src="Assets/Images/dogecoin.jpg" height="250">
+              <div class="card-body">
+                <h3 class="card-title"> Dogecoin to the moon! </h3>
+                <p class="text-wrap">Climb the platforms, collect dogecoin, gather dip to rocket to the moon! Do not fall! Change controls and difficulty in settings.</p>
+              </div>
+              <div class="play d-flex justify-content-center"> <button id="Play2" type="button" class="btn btn-primary">Play</button></div>
             </div>
           </div>
 
@@ -60,8 +71,8 @@
               <div class="card-body">
                 <h3 class="card-title"> Coming Soon! </h3>
                 <p class="text-wrap">I have not added in my next game yet! But don't worry, it is being worked on and will be ready soon! Thank you for your patience.</p>
-                <div class="d-flex justify-content-center"> <button id="Play2" type="button" class="btn btn-primary">Play</button></div>
               </div>
+              <div class="play d-flex justify-content-center"> <button id="Play2" type="button" class="btn btn-primary">Play</button></div>
             </div>
           </div>
 
@@ -71,19 +82,8 @@
               <div class="card-body">
                 <h3 class="card-title"> Coming Soon! </h3>
                 <p class="text-wrap">I have not added in my next game yet! But don't worry, it is being worked on and will be ready soon! Thank you for your patience.</p>
-                <div class="d-flex justify-content-center"> <button id="Play2" type="button" class="btn btn-primary">Play</button></div>
               </div>
-            </div>
-          </div>
-
-          <div class="col-sm-3">
-            <div class="card shadow-sm">
-              <img src="Assets/Images/coming-soon.jpg" height="250">
-              <div class="card-body">
-                <h3 class="card-title"> Coming Soon! </h3>
-                <p class="text-wrap">I have not added in my next game yet! But don't worry, it is being worked on and will be ready soon! Thank you for your patience.</p>
-                <div class="d-flex justify-content-center"> <button id="Play2" type="button" class="btn btn-primary">Play</button></div>
-              </div>
+              <div class="play d-flex justify-content-center"> <button id="Play2" type="button" class="btn btn-primary">Play</button></div>
             </div>
           </div>
         </div>
@@ -99,6 +99,13 @@
       </br> </br> </br> <br>
     </div>
 
+    <!-- Dogecoin game -->
+    <div id="Dogecoin" class="hidden game container-fluid bg-dark bg-gradient pt-5 pb-3">
+      <div class="d-flex justify-content-center"> <button type="button" class="back btn btn-primary">Back</button></div> </br>
+      <div class="d-flex justify-content-center"> <iframe src="https://i.simmer.io/@JPena208/dogecoin-to-the-moon" style="width:360px;height:740px;border:0"></iframe> </div>
+      </br> </br> </br> <br>
+    </div>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
