--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       </div>
     </section>
 
+    <div id="result"></div>
+
     <!-- Row of games -->
     <div class="games-list container-fluid bg-dark bg-gradient pt-5 pb-3">
       <div class="text-white text-center fs-6">
@@ -42,7 +44,7 @@
       
       <div class="container pt-3 pb-5 ">
         <div class="row">
-          <div class="col-sm-3">
+          <div class="item col-sm-3">
             <div class="card shadow-sm">
               <img src="Assets/Images/AsteroidField.png" height="250">
               <div class="card-body">
@@ -54,7 +56,7 @@
             </div>
           </div>
 
-          <div class="col-sm-3">
+          <div class="item col-sm-3">
             <div class="card shadow-sm">
               <img src="Assets/Images/dogecoin.jpg" height="250">
               <div class="card-body">
@@ -65,7 +67,7 @@
             </div>
           </div>
 
-          <div class="col-sm-3">
+          <div class="item col-sm-3">
             <div class="card shadow-sm">
               <img src="Assets/Images/coming-soon.jpg" height="250">
               <div class="card-body">
@@ -76,7 +78,7 @@
             </div>
           </div>
 
-          <div class="col-sm-3">
+          <div class="item col-sm-3">
             <div class="card shadow-sm">
               <img src="Assets/Images/coming-soon.jpg" height="250">
               <div class="card-body">
