--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="result"></div>
 
     <!-- Row of games -->
-    <div class="games-list container-fluid bg-dark bg-gradient pt-5 pb-3">
+    <div class="games-list container-fluid pt-5 pb-3">
       <div class="text-white text-center fs-6">
         Here's my list of games, enjoy!
       </div>
