--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       
       <div class="container pt-3 pb-5 ">
         <div class="row">
-          <div class="item col-sm-3">
+          <div class="item col-sm-3 d-flex justify-content-center">
             <div class="card shadow-sm">
               <img src="Assets/Images/AsteroidField.png" height="250">
               <div class="card-body">
@@ -56,7 +56,7 @@
             </div>
           </div>
 
-          <div class="item col-sm-3">
+          <div class="item col-sm-3 d-flex justify-content-center">
             <div class="card shadow-sm">
               <img src="Assets/Images/dogecoin.jpg" height="250">
               <div class="card-body">
@@ -67,7 +67,7 @@
             </div>
           </div>
 
-          <div class="item col-sm-3">
+          <div class="item col-sm-3 d-flex justify-content-center">
             <div class="card shadow-sm">
               <img src="Assets/Images/coming-soon.jpg" height="250">
               <div class="card-body">
@@ -78,7 +78,7 @@
             </div>
           </div>
 
-          <div class="item col-sm-3">
+          <div class="item col-sm-3 d-flex justify-content-center">
             <div class="card shadow-sm">
               <img src="Assets/Images/coming-soon.jpg" height="250">
               <div class="card-body">
