--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
     </div>
 
     <!-- Asteroid Field game -->
-    <div id="AsteroidField" class="hidden game container-fluid bg-dark bg-gradient pt-5 pb-3">
+    <div id="AsteroidField" class="hidden game container-fluid pt-5 pb-3">
       <div class="d-flex justify-content-center"> <button type="button" class="back btn btn-primary">Back</button></div> </br>
       <div class="d-flex justify-content-center"> <iframe src="https://i.simmer.io/@JPena208/asteroidfield" style="width:1280px;height:720px;border:0"></iframe> </div>
       </br> </br> </br> <br>
     </div>
 
     <!-- Dogecoin game -->
-    <div id="Dogecoin" class="hidden game container-fluid bg-dark bg-gradient pt-5 pb-3">
+    <div id="Dogecoin" class="hidden game container-fluid pt-5 pb-3">
       <div class="d-flex justify-content-center"> <button type="button" class="back btn btn-primary">Back</button></div> </br>
       <div class="d-flex justify-content-center"> <iframe src="https://i.simmer.io/@JPena208/dogecoin-to-the-moon" style="width:360px;height:740px;border:0"></iframe> </div>
       </br> </br> </br> <br>
