--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <img src="Assets/Images/dogecoin.jpg" height="250">
               <div class="card-body">
                 <h3 class="card-title"> Dogecoin to the moon! </h3>
-                <p class="text-wrap">Climb the platforms, collect dogecoin, gather dip to rocket to the moon! Do not fall! Change controls and difficulty in settings.</p>
+                <p class="text-wrap">Climb the platforms, collect doge coins, and gather dip to rocket to the moon! Do not fall! Change controls and difficulty in settings.</p>
               </div>
               <div class="play d-flex justify-content-center"> <button id="Play2" type="button" class="btn btn-primary">Play</button></div>
             </div>
