deleted a slash in file path

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.css"
     />
     <!-- Custom bootstrap scss and custom css styles -->
-    <link rel="stylesheet" href="/css/custom.min.css" />
+    <link rel="stylesheet" href="css/custom.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <title>Games Showcase | Unity Games by Jose Pena</title>
