Resized hamburger icon, fp-nav, and made fp-nav center as possible on all screens

--- a/index.html
+++ b/index.html
@@ -36,17 +36,21 @@
     <!-- Navbar -->
     <nav
       id="navbar"
-      class="fixed-top navbar navbar-expand-md navbar-dark bg-transparent py-3"
+      class="fixed-top navbar navbar-expand-md navbar-dark bg-transparent py-md-3"
       role="navigation"
     >
       <div id="navContainer" class="container">
         <!-- Navbar brand -->
-        <a id="name" class="navbar-brand name" href="#" style="font-weight: 300"
+        <a
+          id="name"
+          class="navbar-brand name"
+          href="#home"
+          style="font-weight: 300"
           >Jose Peña</a
         >
 
         <!-- Icons -->
-        <div id="icons" class="h6 icons ms-auto mx-3">
+        <div id="icons" class="h6 icons ms-auto mx-2 mb-0">
           <a href="https://twitter.com/jpena208?t=lQdnHc83PlldHnfVkxyFYQ&s=09"
             ><i class="bi bi-twitter text-white mx-2"></i
           ></a>
@@ -60,7 +64,7 @@
 
         <!-- Collapse button -->
         <button
-          class="navbar-toggler border-0 shadow-none"
+          class="navbar-toggler border-0 shadow-none py-0"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
