Removed scroll up from top section (to refresh easily on mobile). Added first home screen / section

--- a/index.html
+++ b/index.html
@@ -113,8 +113,24 @@
     <div id="fullpage">
       <!-- Home -->
       <div class="section active text-white" data-anchor="home">
-        <h1 class="text-center">Games Showcase</h1>
-        <p class="text-center">This is a showcase of my Unity games.</p>
+        <div class="container section-container px-5 px-md-0 px-xl-5">
+          <div class="d-md-flex align-items-start justify-content-around">
+            <div class="my-5 mx-md-5">
+              <h1 class="text-center text-md-start title-text"> Made With <span class="text-primary">Unity!</span></h1>
+              <p class="text-center text-md-start title-lead">This is a showcase of my Unity games. They were created with the C# programming language on unity and each took weeks to make.</p>
+            </div>
+            <div class="text-center text-md-start">
+              <!-- <img src="assets/Images/AsteroidField.png" alt="" class="img-fluid rounded my-3"> -->
+              <img src="https://i.ytimg.com/an_webp/pCBqgREiSUE/mqdefault_6s.webp?du=3000&amp;sqp=CKLErpIG&amp;rs=AOn4CLCM2FmyTWiRIeEj5RA-ShnOzkXGTg" class="img-fluid rounded my-4">
+              <p> Want to try to make your first game? Watch this tutorial: </p>
+              <a href="https://youtu.be/pCBqgREiSUE" target="_blank" class="btn btn-primary">
+                <i class="bi bi-play"></i>
+                Watch Tutorial
+              </a>
+            </div>
+
+          </div>
+        </div>
       </div>
 
       <!-- Game 1 -->
