Reduced font size of title lead on max-width 768 to fit content better

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <!-- <img src="assets/Images/AsteroidField.png" alt="" class="img-fluid rounded my-3"> -->
               <img
                 src="https://i.ytimg.com/an_webp/pCBqgREiSUE/mqdefault_6s.webp?du=3000&amp;sqp=CKLErpIG&amp;rs=AOn4CLCM2FmyTWiRIeEj5RA-ShnOzkXGTg"
-                class="img-fluid rounded my-4"
+                class="section-img img-fluid rounded my-4"
               />
               <p>Want to try to make your first game? Watch this tutorial:</p>
               <a
