Finished index.html game sections, testing how game htmls look on mobile phone

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="text-center text-md-start">
               <!-- <img src="assets/Images/AsteroidField.png" alt="" class="img-fluid rounded my-3"> -->
               <img
-                src="https://i.ytimg.com/an_webp/pCBqgREiSUE/mqdefault_6s.webp?du=3000&amp;sqp=CKLErpIG&amp;rs=AOn4CLCM2FmyTWiRIeEj5RA-ShnOzkXGTg"
+                src="Assets/Images/youtubeThumbnail.webp"
                 class="section-img img-fluid rounded my-4"
               />
               <p>Want to try to make your first game? Watch this tutorial:</p>
@@ -146,14 +146,99 @@
 
       <!-- Game 1 -->
       <div class="section text-white" data-anchor="game1">
-        <h1 class="text-center">Game 1</h1>
-        <p class="text-center">This is a game that I made using Unity.</p>
+        <div class="container section-container px-5 px-md-0 px-xl-5">
+          <div class="row">
+            <div class="col-md-5">
+              <div class="my-3 mx-md-5">
+                <h1 class="text-center text-md-start title-text">
+                  Asteroid
+                  <span class="text-secondary text-shadow-primary">Field!</span>
+                </h1>
+                <p class="text-center text-md-start title-lead">
+                  Avoid the rocks. Hit left shift boost. Collect popup items to
+                  slow down asteroids. Controls and difficulty can be changed.
+                </p>
+                <span class="text-center text-md-start">
+                  <a
+                    href="game1.html"
+                    target="_blank"
+                    class="play-button-above btn btn-primary"
+                  >
+                    <i class="bi bi-play"></i>
+                    Play Now
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="col-md-7">
+              <img
+                src="assets/Images/AsteroidField.gif"
+                alt=""
+                class="img-fluid rounded my-3"
+              />
+
+              <div class="text-center text-md-start">
+                <a
+                  href="game1.html"
+                  target="_blank"
+                  class="play-button-below btn btn-primary my-3"
+                >
+                  <i class="bi bi-play"></i>
+                  Play Now
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
       <!-- Game 2 -->
       <div class="section text-white" data-anchor="game2">
-        <h1 class="text-center">Game 2</h1>
-        <p class="text-center">This is a game that I made using Unity.</p>
+        <div class="container section-container px-5 px-md-0 px-xl-5">
+          <div class="row">
+            <div class="col-md-5">
+              <div class="my-3 mx-md-5">
+                <h1 class="text-center text-md-start title-text">
+                  Dogecoin to the
+                  <span class="text-info text-shadow-primary">Moon!</span>
+                </h1>
+                <p class="text-center text-md-start title-lead">
+                  Climb the platforms, collect the coins, and gather dip to
+                  rocket to the moon! Do not fall! Change controls and
+                  difficulty in settings.
+                </p>
+                <span class="text-center text-md-start">
+                  <a
+                    href="game2.html"
+                    target="_blank"
+                    class="play-button-above btn btn-primary"
+                  >
+                    <i class="bi bi-play"></i>
+                    Play Now
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="col-md-7 text-center">
+              <img
+                src="assets/Images/dogecoin.gif"
+                alt=""
+                class="doge-img img-fluid rounded my-3"
+              />
+
+              <div class="text-center text-md-start">
+                <a
+                  href="game2.html"
+                  target="_blank"
+                  class="play-button-below btn btn-primary my-3"
+                >
+                  <i class="bi bi-play"></i>
+                  Play Now
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
