--- a/game1.html
+++ b/game1.html
@@ -1,6 +1,61 @@
-<!-- Asteroid Field game -->
-<div id="AsteroidField" class="hidden game container-fluid pt-5 pb-3">
-    <div class="d-flex justify-content-center"> <button type="button" class="back btn btn-primary">Back</button></div> </br>
-    <div class="d-flex justify-content-center"> <iframe src="https://i.simmer.io/@JPena208/asteroidfield" style="width:1280px;height:720px;border:0"></iframe> </div>
-    </br> </br> </br> <br>
-  </div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Bootstrap Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200;300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Custom bootstrap scss and custom css styles -->
+    <link rel="stylesheet" href="css/custom.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+
+    <title>Asteroid Field | Unity Games by Jose Pena</title>
+  </head>
+
+  <body class="game1-body">
+    <!-- Asteroid Field game -->
+    <div id="AsteroidField" class="container-fluid my-5">
+      <div class="d-flex flex-column align-items-center">
+        <!-- Game 1 iframe -->
+        <iframe
+          src="https://i.simmer.io/@JPena208/asteroidfield"
+          style="width: 1280px; height: 720px"
+        ></iframe>
+
+        <!-- Stuff under game -->
+        <div class="mx-5 my-2">
+          <span class="text-white">
+            Refresh the page to play again after clicking quit.
+          </span>
+          <button href="index.html" type="button" class="back btn btn-primary">
+            Back
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Boostrap bundle  -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Custom JS -->
+    <script src="js/index.js"></script>
+  </body>
+</html>
