--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </div>
             <div class="col-md-7">
               <img
-                src="assets/Images/AsteroidField.gif"
+                src="Assets/Images/AsteroidField.gif"
                 alt=""
                 class="img-fluid rounded my-3"
               />
@@ -221,7 +221,7 @@
             </div>
             <div class="col-md-7 text-center">
               <img
-                src="assets/Images/dogecoin.gif"
+                src="Assets/Images/dogecoin.gif"
                 alt=""
                 class="doge-img img-fluid rounded my-3"
               />
