tweaked game htmls

--- a/game1.html
+++ b/game1.html
@@ -35,16 +35,21 @@
           src="https://i.simmer.io/@JPena208/asteroidfield"
           style="width: 1280px; height: 720px"
         ></iframe>
+      </div>
+    </div>
 
-        <!-- Stuff under game -->
-        <div class="mx-5 my-2">
-          <span class="text-white">
-            Refresh the page to play again after clicking quit.
-          </span>
-          <button href="index.html" type="button" class="back btn btn-primary">
-            Back
-          </button>
-        </div>
+    <!-- Stuff under game -->
+    <div class="container mx-5 my-2">
+      <div class="d-flex justify-content-between">
+        <span class="text-white">
+          Refresh the page to play again after clicking quit.
+        </span>
+        <span class="me-auto mx-3 fst-italic text-danger"
+          >Not playable on mobile.</span
+        >
+        <button href="index.html" type="button" class="back btn btn-primary">
+          Back
+        </button>
       </div>
     </div>
 
