edited color of asteroid field title

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               <div class="my-3 mx-md-5">
                 <h1 class="text-center text-md-start title-text">
                   Asteroid
-                  <span class="text-secondary text-shadow-primary">Field!</span>
+                  <span class="text-dark text-shadow-dark">Field!</span>
                 </h1>
                 <p class="text-center text-md-start title-lead">
                   Avoid the rocks. Hit left shift boost. Collect popup items to
