edited sizes of games

--- a/game2.html
+++ b/game2.html
@@ -32,8 +32,9 @@
       <div class="d-flex flex-column align-items-center">
         <!-- Game 2 iframe -->
         <iframe
+          class="my-2"
           src="https://i.simmer.io/@JPena208/dogecoin-to-the-moon"
-          style="width: 360px; height: 740px"
+          style="width: 300px; height: 617px"
         ></iframe>
 
         <span class="text-white">
