--- a/game1.html
+++ b/game1.html
@@ -33,14 +33,14 @@
         <!-- Game 1 iframe -->
         <iframe
           src="https://i.simmer.io/@JPena208/asteroidfield"
-          style="width: 1280px; height: 720px"
+          style="width: 1000px; height: 563px"
         ></iframe>
       </div>
     </div>
 
     <!-- Stuff under game -->
     <div class="container mx-5 my-2">
-      <div class="d-flex justify-content-between">
+      <div class="d-flex flex-column flex-md-row justify-content-between">
         <span class="text-white">
           Refresh the page to play again after clicking quit.
         </span>
