--- a/html/game2.html
+++ b/html/game2.html
@@ -20,8 +20,8 @@
     />
 
     <!-- Custom bootstrap scss and custom css styles -->
-    <link rel="stylesheet" href="css/custom.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" href="../css/custom.min.css" />
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
 
     <title>Dogecoin To The Moon | Unity Games by Jose Pena</title>
   </head>
@@ -29,7 +29,7 @@
   <body class="game2-body">
     <!-- Dogecoin To The Moon game -->
     <div id="Dogecoin" class="container-fluid my-5">
-      <div class="d-flex flex-column align-items-center">
+      <div class="d-flex flex-column align-items-center text-center">
         <!-- Game 2 iframe -->
         <iframe
           class="my-2"
