--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </p>
                 <span class="text-center text-md-start">
                   <a
-                    href="game1.html"
+                    href="html/game1.html"
                     target="_blank"
                     class="play-button-above btn btn-primary"
                   >
@@ -179,7 +179,7 @@
 
               <div class="text-center text-md-start">
                 <a
-                  href="game1.html"
+                  href="html/game1.html"
                   target="_blank"
                   class="play-button-below btn btn-primary my-3"
                 >
@@ -209,7 +209,7 @@
                 </p>
                 <span class="text-center text-md-start">
                   <a
-                    href="game2.html"
+                    href="html/game2.html"
                     target="_blank"
                     class="play-button-above btn btn-primary"
                   >
@@ -228,7 +228,7 @@
 
               <div class="text-center text-md-start">
                 <a
-                  href="game2.html"
+                  href="html/game2.html"
                   target="_blank"
                   class="play-button-below btn btn-primary my-3"
                 >
