Back buttons working

--- a/html/game1.html
+++ b/html/game1.html
@@ -47,10 +47,9 @@
         <span class="me-auto mx-3 fst-italic text-danger"
           >Not playable on mobile.</span
         >
-        <!-- <script>
-          document.write('<a href="' + document.referrer + '">Go Back</a>');
-        </script> -->
-        <button id="go-back" type="button" class="btn btn-primary">Back</button>
+
+        <!-- back button  -->
+        <a href="../index.html" class="btn btn-primary">Back</a>
       </div>
     </div>
 
