--- a/html/game2.html
+++ b/html/game2.html
@@ -41,9 +41,7 @@
           Refresh the page to play again after clicking quit.
         </span>
         <span class="my-3 fst-italic text-info">Not playable on mobile. </span>
-        <button href="index.html" type="button" class="back btn btn-dark">
-          Back
-        </button>
+        <a href="../index.html" class="back btn btn-dark"> Back </a>
       </div>
     </div>
 
