Added game 3 and game 4

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         >
 
         <!-- Icons -->
-        <div id="icons" class="h6 icons ms-auto mx-2 mb-0">
+        <div id="icons" class="h6 icons me-auto mx-2 mb-0">
           <a href="https://twitter.com/jpena208?t=lQdnHc83PlldHnfVkxyFYQ&s=09"
             ><i class="bi bi-twitter text-white mx-2"></i
           ></a>
@@ -95,14 +95,23 @@
            -->
           <!-- Nav Menu Links -->
           <ul id="nav-ul" class="navbar-nav ms-auto">
-            <li class="active nav-item" data-menuanchor="home">
+            <li
+              class="active nav-item mx-2 mx-md-0 ms-auto"
+              data-menuanchor="home"
+            >
               <a class="nav-link" href="#home">Home</a>
             </li>
-            <li class="nav-item" data-menuanchor="game1">
+            <li class="nav-item mx-2 mx-md-0" data-menuanchor="game1">
               <a class="nav-link" href="#game1">Game 1</a>
             </li>
-            <li class="nav-item" data-menuanchor="game2">
+            <li class="nav-item mx-2 mx-md-0" data-menuanchor="game2">
               <a class="nav-link" href="#game2">Game 2</a>
+            </li>
+            <li class="nav-item mx-2 mx-md-0" data-menuanchor="game3">
+              <a class="nav-link" href="#game3">Game 3</a>
+            </li>
+            <li class="nav-item mx-2 mx-md-0" data-menuanchor="game4">
+              <a class="nav-link" href="#game4">Game 4</a>
             </li>
           </ul>
         </div>
@@ -229,6 +238,102 @@
               <div class="text-center text-md-start">
                 <a
                   href="html/game2.html"
+                  target="_blank"
+                  class="play-button-below btn btn-primary my-3"
+                >
+                  <i class="bi bi-play"></i>
+                  Play Now
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Game 3 -->
+      <div class="section text-white" data-anchor="game3">
+        <div class="container section-container px-5 px-md-0 px-xl-5">
+          <div class="row">
+            <div class="col-md-5">
+              <div class="my-3 mx-md-5">
+                <h1 class="text-center text-md-start title-text">
+                  Go
+                  <span class="text-info text-shadow-light">Bananas!</span>
+                </h1>
+                <p class="text-center text-md-start title-lead">
+                  Click a grass tile to move! Collect as many bananas as you can
+                  with the time given! Avoid the tigers!
+                </p>
+                <span class="text-center text-md-start">
+                  <a
+                    href="html/game3.html"
+                    target="_blank"
+                    class="play-button-above btn btn-primary"
+                  >
+                    <i class="bi bi-play"></i>
+                    Play Now
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="col-md-7">
+              <img
+                src="Assets/Images/GoBananas.gif"
+                alt=""
+                class="img-fluid rounded my-3"
+              />
+
+              <div class="text-center text-md-start">
+                <a
+                  href="html/game3.html"
+                  target="_blank"
+                  class="play-button-below btn btn-primary my-3"
+                >
+                  <i class="bi bi-play"></i>
+                  Play Now
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Game 4 -->
+      <div class="section text-white" data-anchor="game4">
+        <div class="container section-container px-5 px-md-0 px-xl-5">
+          <div class="row">
+            <div class="col-md-5">
+              <div class="my-3 mx-md-5">
+                <h1 class="text-center text-md-start title-text">
+                  <u class="text-primary text-shadow-primary">Roguelike</u>
+                </h1>
+                <p class="text-center text-md-start title-lead">
+                  Pick up items, defeat enemies, and find the golden end room!
+                  WASD to move, arrow keys to fire. Q and E to use and switch
+                  items.
+                </p>
+                <span class="text-center text-md-start">
+                  <a
+                    href="html/game4.html"
+                    target="_blank"
+                    class="play-button-above btn btn-primary"
+                  >
+                    <i class="bi bi-play"></i>
+                    Play Now
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="col-md-7">
+              <img
+                src="Assets/Images/Roguelike.gif"
+                alt=""
+                class="img-fluid rounded my-3"
+              />
+
+              <div class="text-center text-md-start">
+                <a
+                  href="html/game4.html"
                   target="_blank"
                   class="play-button-below btn btn-primary my-3"
                 >
