--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div id="fullpage">
       <!-- Home -->
       <div class="section active text-white" data-anchor="home">
-        <div class="container section-container px-5 px-md-0 px-xl-5">
+        <div class="container section-container px-5 px-md-0 px-xl-5 mb-5">
           <div class="d-md-flex align-items-start justify-content-around">
             <div class="my-3 mx-md-5">
               <h1 class="text-center text-md-start title-text">
@@ -155,7 +155,7 @@
 
       <!-- Game 1 -->
       <div class="section text-white" data-anchor="game1">
-        <div class="container section-container px-5 px-md-0 px-xl-5">
+        <div class="container section-container px-5 px-md-0 px-xl-5 mb-5">
           <div class="row">
             <div class="col-md-5">
               <div class="my-3 mx-md-5">
@@ -203,7 +203,7 @@
 
       <!-- Game 2 -->
       <div class="section text-white" data-anchor="game2">
-        <div class="container section-container px-5 px-md-0 px-xl-5">
+        <div class="container section-container px-5 px-md-0 px-xl-5 mb-5">
           <div class="row">
             <div class="col-md-5">
               <div class="my-3 mx-md-5">
@@ -252,7 +252,7 @@
 
       <!-- Game 3 -->
       <div class="section text-white" data-anchor="game3">
-        <div class="container section-container px-5 px-md-0 px-xl-5">
+        <div class="container section-container px-5 px-md-0 px-xl-5 mb-5">
           <div class="row">
             <div class="col-md-5">
               <div class="my-3 mx-md-5">
@@ -300,7 +300,7 @@
 
       <!-- Game 4 -->
       <div class="section text-white" data-anchor="game4">
-        <div class="container section-container px-5 px-md-0 px-xl-5">
+        <div class="container section-container px-5 px-md-0 px-xl-5 mb-5">
           <div class="row">
             <div class="col-md-5">
               <div class="my-3 mx-md-5">
