corrected games links

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </p>
                 <span class="text-center text-md-start">
                   <a
-                    href="html/game1.html"
+                    href="games/game1.html"
                     class="play-button-above btn btn-primary"
                   >
                     <i class="bi bi-play"></i>
@@ -187,7 +187,7 @@
 
               <div class="text-center text-md-start">
                 <a
-                  href="html/game1.html"
+                  href="games/game1.html"
                   class="play-button-below btn btn-primary my-3"
                 >
                   <i class="bi bi-play"></i>
@@ -216,7 +216,7 @@
                 </p>
                 <span class="text-center text-md-start">
                   <a
-                    href="html/game2.html"
+                    href="games/game2.html"
                     class="play-button-above btn btn-primary"
                   >
                     <i class="bi bi-play"></i>
@@ -234,7 +234,7 @@
 
               <div class="text-center text-md-start">
                 <a
-                  href="html/game2.html"
+                  href="games/game2.html"
                   class="play-button-below btn btn-primary my-3"
                 >
                   <i class="bi bi-play"></i>
@@ -262,7 +262,7 @@
                 </p>
                 <span class="text-center text-md-start">
                   <a
-                    href="html/game3.html"
+                    href="games/game3.html"
                     class="play-button-above btn btn-primary"
                   >
                     <i class="bi bi-play"></i>
@@ -280,7 +280,7 @@
 
               <div class="text-center text-md-start">
                 <a
-                  href="html/game3.html"
+                  href="games/game3.html"
                   class="play-button-below btn btn-primary my-3"
                 >
                   <i class="bi bi-play"></i>
@@ -308,7 +308,7 @@
                 </p>
                 <span class="text-center text-md-start">
                   <a
-                    href="html/game4.html"
+                    href="games/game4.html"
                     class="play-button-above btn btn-primary"
                   >
                     <i class="bi bi-play"></i>
@@ -326,7 +326,7 @@
 
               <div class="text-center text-md-start">
                 <a
-                  href="html/game4.html"
+                  href="games/game4.html"
                   class="play-button-below btn btn-primary my-3"
                 >
                   <i class="bi bi-play"></i>
