Back button on game pages goes back to correct game section

--- a/games/game2.html
+++ b/games/game2.html
@@ -41,7 +41,7 @@
           Refresh the page to play again after clicking quit.
         </span>
         <span class="my-3 fst-italic text-info">Not playable on mobile. </span>
-        <a href="../index.html" class="back btn btn-dark"> Back </a>
+        <a href="../index.html#game2" class="back btn btn-dark"> Back </a>
       </div>
     </div>
 
