--- a/games/game3.html
+++ b/games/game3.html
@@ -49,7 +49,7 @@
         >
 
         <!-- back button  -->
-        <a href="../index.html" class="btn btn-primary">Back</a>
+        <a href="../index.html#game3" class="btn btn-primary">Back</a>
       </div>
     </div>
 
